Fix broken css in edit link-list-block

--- a/public/designs/themes/base-responsive/style.scss
+++ b/public/designs/themes/base-responsive/style.scss
@@ -554,6 +554,15 @@ div#notice {
   list-style: none;
 }
 
+/*************************** Edit Link List Block *******************************/
+#edit-link-list-block {
+  width: auto;
+  position: static;
+  margin-bottom: 15px;
+}
+#edit-link-list-block .display {
+  margin-top: 15px;
+}
 
 /*************************** Link List *******************************/
 
